--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
@@ -1,166 +1,160 @@
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
-    <p style="font-size: 20px; color: white">Procesando información, por favor no cierre la ventana.</p>
+  <p style="font-size: 20px; color: white">Procesando información, por favor no cierre la ventana.</p>
 </ngx-spinner>
-<div class="container">
-    <div class="formularios">
-        <form [formGroup]="formRegistroPersona" (ngSubmit)="registrarPersona()">       
-        <div class="form-group row" >
-            <div class="col-md-12"><img src="/assets/img/logo-produce2.png"><br><br><br></div>
-            <h2 align="center">Crea una cuenta de Personal</h2>
-            <p align="center">Regístrese y use esta cuenta para acceder a todas las aplicaciones,
-                comunidades, soporte y más del Ministerio de Producción.<br><br></p>
-            <div class="group-input">
-                <mat-form-field class="col-xs-12 col-sm-6 col-md-6 col-lg-6" appearance="fill">
-                    <mat-label>Tipo documento (*)</mat-label>
-                    <mat-select (selectionChange)="fnChangeTipoDocumento($event.value)"    
-                    matInput  formControlName="tipoDocumento"  >
-                    <mat-option value=0>--Seleccionar--</mat-option>
-                    <mat-option matTooltip = {{p.vDescripcion}} matTooltipPosition="right"
-                    [value]="p.value" *ngFor="let p of listaTipoDocumento">
-                        {{p.label}}</mat-option>
-                    </mat-select>  
-                    <mat-error *ngIf="tipoDocumentoErrors">{{ tipoDocumentoErrors }}</mat-error>                 
-                </mat-form-field>  
+<body class="align">
+    <div class="login">  
+      <header class="login__header">
+        <div class="logo-produce">
+          <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
+        </div>  
+        <div class="logo-aplicacion">
+          <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">
+        </div>
+          <h3>REGISTRATE</h3>
+          <p>Persona Natural</p>      
+          <div class="center">
+            <button class="buttonPaso" (click)="clickPaso1()" >1</button>
+            <button class="buttonPaso" [ngClass]="ispaso2 === true ? 'disabled' : 'null'" (click)="clickPaso2()">2</button>
+          </div>
+    </header>  
 
-                <mat-form-field appearance="fill" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" *ngIf="codigoTipoDocumento==='dni'">
-                    <mat-label>Número de documento (*)</mat-label>
-                    <input matInput minlength={{longitudDocumento}} maxlength={{longitudDocumento}} (keypress)="numberOnly($event)" 
-                    placeholder="Ingresar número de documento" formControlName="nroDocPerNatural"  />
-                    <button mat-button matSuffix mat-stroked-button aria-label="search" type="button" (click)="fnBtnPersonaBuscar()">
-                        <mat-icon>search</mat-icon>
-                    </button>
-                    <mat-error *ngIf="nroDocPerNaturalErrors">{{ nroDocPerNaturalErrors }}</mat-error>
-                </mat-form-field>
-
-                <mat-form-field appearance="fill" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" *ngIf="codigoTipoDocumento!=='dni'">
-                    <mat-label>Número de documento (*)</mat-label>
-                    <input matInput minlength=9 maxlength={{longitudDocumento}} placeholder="Ingresar número de documento" formControlName="nroDocPerNatural"/>
-                    <mat-error *ngIf="nroDocPerNaturalErrors">{{ nroDocPerNaturalErrors }}</mat-error>
-                </mat-form-field>
-
-                <ng-template [ngIf]="noEsRUC" [ngIfElse]="esRUC">
-                    <mat-form-field appearance="fill" class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                        <mat-label>Nombres (*)</mat-label>
-                        <input matInput placeholder="Campo autocompletado con DNI" maxlength="200"
-                        formControlName="nombres" readonly />
-                        <mat-error *ngIf="nombresErrors">{{ nombresErrors }}</mat-error>
-                    </mat-form-field>
-                    <mat-form-field appearance="fill" class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                        <mat-label>Apellidos (*)</mat-label>
-                        <input matInput placeholder="Campo autocompletado con DNI" maxlength="200"
-                        formControlName="apellidos" readonly />
-                        <mat-error *ngIf="apellidosErrors">{{ apellidosErrors }}</mat-error>
-                    </mat-form-field>
-                </ng-template>
-                <ng-template #esRUC>
-                    <mat-form-field appearance="fill" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <mat-label>Razon Social (*)</mat-label>
-                        <input matInput placeholder="Campo autocompletado con RUC" maxlength="500"
-                        formControlName="razonSocial" readonly />
-                        <mat-error *ngIf="razonSocialErrors">{{ razonSocialErrors }}</mat-error>
-                    </mat-form-field>
-                </ng-template>
-                <mat-form-field class="col-xs-12 col-sm-6 col-md-6 col-lg-6" appearance="fill">
-                    <mat-label>Departamento (*)</mat-label>
-                    <mat-select matInput  formControlName="departamento"  >
-                        <mat-option value=0>--Seleccionar--</mat-option>
-                        <mat-option matTooltip = {{p.text}} matTooltipPosition="right"
-                        [value]="p.value" *ngFor="let p of listaDepartamentos">
-                            {{p.text}}</mat-option>
-                    </mat-select>  
-                    <mat-error *ngIf="departamentoErrors">{{ departamentoErrors }}</mat-error>                 
-                </mat-form-field>  
-                <mat-form-field class="col-xs-12 col-sm-6 col-md-6 col-lg-6" appearance="fill">
-                    <mat-label>Provincia (*)</mat-label>
-                    <mat-select matInput  formControlName="provincia"  >
-                        <mat-option value=0>--Seleccionar--</mat-option>
-                        <mat-option matTooltip = {{p.text}} matTooltipPosition="right"
-                        [value]="p.value" *ngFor="let p of listaProvincias">
-                            {{p.text}}</mat-option>
-                    </mat-select>  
-                    <mat-error *ngIf="provinciaErrors">{{ provinciaErrors }}</mat-error>                 
-                </mat-form-field>  
-                <mat-form-field class="col-xs-12 col-sm-6 col-md-6 col-lg-6" appearance="fill">
-                    <mat-label>Distrito (*)</mat-label>
-                    <mat-select matInput  formControlName="distrito"  >
-                        <mat-option value=0>--Seleccionar--</mat-option>
-                        <mat-option matTooltip = {{p.text}} matTooltipPosition="right"
-                        [value]="p.value" *ngFor="let p of listaDistritos">
-                            {{p.text}}</mat-option>
-                    </mat-select>  
-                    <mat-error *ngIf="distritoErrors">{{ distritoErrors }}</mat-error>                 
-                </mat-form-field>  
-                <mat-form-field appearance="fill" class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                    <mat-label>Celular (*)</mat-label>
-                    <input matInput placeholder="Ingresar número de celular" maxlength="9"
-                    formControlName="celular" />
-                    <mat-error *ngIf="celularErrors">{{ celularErrors }}</mat-error>
-                </mat-form-field>
-                <mat-form-field appearance="fill" class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                    <mat-label>Correo electrónico (*)</mat-label>
-                    <input matInput placeholder="Ingresar correo electrónico" maxlength="100"
-                    formControlName="correo" />
-                    <mat-error *ngIf="correoErrors">{{ correoErrors }}</mat-error>
-                </mat-form-field>
-                <mat-form-field appearance="fill" class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                    <mat-label>Contraseña (*)</mat-label>
-                    <input type="password" matInput placeholder="Ingresar contraseña"
-                    formControlName="contrasena" />
-                    <mat-error *ngIf="contrasenaErrors">{{ contrasenaErrors }}</mat-error>
-                    <mat-hint style="color: #9B9B9B">Usa 8 o más caracteres con una combinación de letras, números y símbolos</mat-hint>   
-                </mat-form-field>
-                <div appearance="legacy" style="padding-top: 16px;">
-                    <label class="col-sm-6" appearance="legacy" style="padding-top: 16px;">¿Usted tiene un RUC de Persona Natural? </label>
-                    <mat-radio-group formControlName="tieneRuc" class="col-sm-6" appearance="legacy" style="padding-top: 16px;">
-                        <mat-radio-button value="true" (change)="onChangeTieneRuc($event.value)">Si&nbsp;&nbsp;</mat-radio-button>
-                        <mat-radio-button value="false" (change)="onChangeTieneRuc($event.value)">NO&nbsp;</mat-radio-button>   
-                    </mat-radio-group>
-                    <div class="col-sm-12" appearance="legacy" style="font-size: 75%;">
-                        <mat-error *ngIf="tieneRucErrors">{{ tieneRucErrors }}</mat-error>      
-                    </div>
-                    <br>
-                </div>
-                <mat-form-field appearance="fill" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" *ngIf="!isHidden">
-                    <mat-label>RUC de persona natural (*)</mat-label>
-                    <input matInput placeholder="Ingresar RUC de persona natural" formControlName="numeroDocumento"  
-                    maxlength="11" (keypress)="numberOnly($event)"/>
-                    <button mat-button matSuffix mat-stroked-button aria-label="search" type="button" (click)="fnBtnRUCBuscar()">
-                        <mat-icon>search</mat-icon>
-                    </button>
-                    <mat-error *ngIf="numeroDocumentoErrors">{{ numeroDocumentoErrors }}</mat-error>
-                </mat-form-field>
-                <mat-form-field appearance="fill" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" *ngIf="!isHidden">
-                    <mat-label>Razon Social (*)</mat-label>
-                    <input matInput placeholder="Campo autocompletado con RUC" maxlength="500"
-                    formControlName="razonSocial" readonly />
-                    <mat-error *ngIf="razonSocialErrors">{{ razonSocialErrors }}</mat-error>
-                  </mat-form-field>
-                <!-- <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                    <label for="linea">Sexo</label>
-                    <app-select [items]="listaSexo" [(Model)]="form.Sexo" [disabled]="disabled"></app-select>
-                </div> -->
-
+      <div class="login__form">  
+      <div *ngIf="isVisiblePaso1">
+        <label class="check" id="c1">TENGO RUC
+          <input type="checkbox" [(ngModel)]="tengoRuc">
+          <span class="checkmark"></span>
+        </label>
+    
+        <div *ngIf="tengoRuc">
+            <label class="control-label" >RUC</label>
+            <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872"  [(ngModel)]="ruc" (change)="changeRuc($event)" maxlength="11" (keypress)="restrictNumeric($event)">
+            <p class="validador" *ngIf="validadorRuc">Debe ingresar el RUC.</p>
+          <p class="validador" *ngIf="validadorRucDigitos">El RUC debe tener 11 digitos.</p>
+         </div>
+    
+         <div class="column">
+            <div class="left">
+                <label for="tipoDoc">TIPO DOCUMENTO</label>
+                <select name="select" placeholder="Seleccionar" [(ngModel)]="tipoDoc" (change)="changeTipoDocumento($event)">
+                   <option value="0">--Seleccionar--</option>
+                   <option value="1">DNI</option>
+                   <option value="2">Carnet de Extranjería</option>
+                </select>
+                <p class="validador" *ngIf="validadorTipoDocumento">Debe ingresar el tipo de documento.</p>
+            </div>        
+            <div class="right">
+                <label for="numeroDoc">NÚMERO DOCUMENTO</label>
+                 <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687" [(ngModel)]="numeroDoc" (change)="changeNroDocumento($event)" maxlength="12" (keypress)="restrictNumeric($event)" (blur)="btnBuscarDNI()"  [disabled]="isDisableNroDocumento">  <!--(blur)="buscarReniec()" -->
+                <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el número de documento.</p>
             </div>
         </div>
-        <div class="form-group row">
-            <div appearance="fill" class="col-xs-12 col-md-12 col-sm-12 col-lg-12" #controlTerms1>
-                <mat-checkbox class="check" formControlName="terminos" #elemTerms> </mat-checkbox>
-                &nbsp; Acepta los <span style="color: #157BDF">términos, condiciones y
-                    políticas de privacidad de tu persona</span>
-                    <mat-error *ngIf="terminosErrors">{{ terminosErrors }}</mat-error>
-            </div>
+    
+          <div>
+            <label for="apellidos">APELLIDOS</label>
+            <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" [(ngModel)]="apellidos" (change)="changeApeliidos($event)" maxlength="150" disabled>
+            <p  class="validador" *ngIf="validadorApellidos">Debe ingresar los apellidos.</p>
+          </div>
+    
+          <div>
+            <label for="nombres">NOMBRES</label>
+            <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila" [(ngModel)]="nombres" (change)="changeNombres($event)" maxlength="150" disabled>
+            <p class="validador" *ngIf="validadorNombres">Debe ingresar los nombres.</p>
+          </div>
+    
+          <div>
+            <label for="celular">CELULAR</label>
+            <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"  [(ngModel)]="celular" (change)="changeCelular($event)" maxlength="9" (keypress)="restrictNumeric($event)">
+            <p class="validador" *ngIf="validadorCelular">Debe ingresar el celular.</p>
+            <p class="validador" *ngIf="validadorCelularLength">El celular debe contener 9 digitos</p>
+          </div>
+    
+          <div>
+            <button class="buttonSiguiente" (click)="clickPaso2()">Siguiente</button>
+            <button class="buttonCancelar">Cancelar</button>
+          </div>
+      </div>
+      <div *ngIf="isVisiblePaso2">
+        <div>
+          <label for="correo">CORREO</label>
+          <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"  [(ngModel)]="correo"  (change)="changeCorreo($event)" maxlength="150" >
+             <p class="validador" *ngIf="validadorCorreo">Debe ingresar el correo.</p>
+             <p class="validador" *ngIf="validadorCorreoInvalido">Correo inválido.</p> 
         </div>
-        <div class="form-group row">
-            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12">
-                <!-- <input type="button" class="btn btn-tramite2" (click)="fnBtnRegistrar()" value="Regístrate" /> -->
-                <input type="submit" class="btn btn-tramite2" value="Regístrate" />
-            </div>
+  
+      <div>
+        <div class="input-wrapper">
+          <label for="contrasena">CONTRASEÑA</label>
+          <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena($event)" maxlength="150" >      
+          <img src="../../assets/img/ver_on.png" (click)="mostrarContrasena()" id="eyeContrasena" class="input-icon password">
         </div>
-        </form>
-        <div class="form-group row">
-            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12" align="center">
-                ¿Ya tienes cuenta de persona? <a [routerLink]="['/sesion-persona']">¡Ingresa aquí!</a>
-            </div>
+        <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
+        <p class="validador" *ngIf="validadorRequisitosContrasena">La contraseña debe cumplir con los requistos</p>
+      </div>
+
+      <div>
+        <div class="input-wrapper">
+          <label for="contrasena_rep">REPETIR CONTRASEÑA</label>
+          <input type="password"  id="contrasena_rep" name="contrasena_rep" placeholder="" [(ngModel)]="contrasena_rep" (change)="changeContrasenaRep($event)" maxlength="150" >      
+          <img src="../../assets/img/ver_on.png" (click)="mostrarContrasenaRepe()" id="eyeContrasena_rep" class="input-icon password">
         </div>
+      <p class="validador" *ngIf="validadorContrasenaRep || validadorContrasenaRepetir">No coincide con la contraseña ingresada.</p>
+      </div>
+
+
+        <div class="column">
+          <div class="left">
+            <label class="radio">Al menos un simbolo
+             <input type="radio"  name="radioSimbolo" [checked]="ValidadorSimbolo"  disabled>
+             <span class="checkradio"></span>
+            </label>
+         </div>
+          
+          <div class="right">
+            <label class="radio">Al menos un número
+             <input type="radio"  name="radioNumero" [checked]="ValidadorNumeros"  disabled>
+             <span class="checkradio"></span>
+            </label>
+         </div>
+        </div>
+  
+        <div class="columnRadio">
+        <div class="left">
+          <label class="radio">Al menos una mayúscula
+           <input type="radio"  name="radioMayus" [checked]="ValidadorMayuscula"  disabled>
+           <span class="checkradio"></span>
+          </label>
+        </div>
+        
+        <div class="right">
+          <label class="radio">Más de 8 digitos
+           <input type="radio"  name="radioDigitos" [checked]="Validador8Digitos"  disabled>
+           <span class="checkradio"></span>
+          </label>
+        </div>
+      </div>
+
+
+      <label class="check" id="c1">Acepto los términos y la <a href="#">Política de Protección de Datos</a>
+        <input type="checkbox" [(ngModel)]="terminos_politica"  (change)="changeTerminos($event)">
+        <span class="checkmark"></span>
+      </label>
+
+      <label class="check" id="c1">Acepto los términos y la mensajeria
+        <input type="checkbox" [(ngModel)]="terminos_mensajeria"  (change)="changeTerminos($event)" >
+        <span class="checkmark"></span>
+      </label>
+      <p class="validador" *ngIf="validadorTerminos">Marcar los términos y condiciones.</p>
+
+        <div>
+          <button class="buttonSiguiente" (click)="registroPersonaService()">Registrar</button>
+          <button class="buttonCancelar"  (click)="clickPaso1()">Regresar</button>      
+        </div>
+    
+      </div>
+      <div class="footer">
+        <p>¿Ya tienes una cuenta?</p>  
+        <a href="#">Ingresa aquí</a>
+      </div>
     </div>
-</div>
+  </div>
+</body>
