--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
@@ -1,51 +1,58 @@
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
-    <p style="font-size: 20px; color: white">Procesando información, por favor no cierre la ventana.</p>
+  <p style="font-size: 20px; color: white">Procesando información, por favor no cierre la ventana.</p>
 </ngx-spinner>
-<div class="container">
-    <div class="formularios">
-        <div class="col-md-12"><img src="/assets/img/logo-produce2.png"><br><br><br></div>
-        <h2 align="center">Iniciar sesión en tu cuenta de Empresa</h2>
-        <p align="center">Una cuenta para todas las aplicaciones del Ministerio de Producción.<br><br></p>
-        <div class="form-group row">
-            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12">
-                <label for="linea">RUC <i class="fa fa-info-circle"></i></label>
-                <input type="text" class="form-control ng-pristine ng-untouched ng-valid ng-empty ng-valid-maxlength"
-                    maxlength="11" [(ngModel)]="form.NumeroDocumento" placeholder="Ingresar RUC" [ngClass]="{'has-error': errors.NumeroDocumento}">
-                    <span class="help-block" *ngIf="errors.NumeroDocumento">{{errors.NumeroDocumento}}</span>
-            </div>
+<body class="align">
+    <div class="login">
+      <header class="login__header">
+        <div class="logo-produce">
+          <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
+        </div>  
+        <div class="logo-aplicacion">
+          <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">
         </div>
-        <div class="form-group row">
-            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12">
-                <label for="linea">Número de Documento de Identidad <i class="fa fa-info-circle"></i></label>
-                <input type="text" class="form-control ng-pristine ng-untouched ng-valid ng-empty ng-valid-maxlength"
-                    maxlength="11" [(ngModel)]="form.NroDocPerNatural"
-                    placeholder="Ingresar tu DNI, CE, CAN, PS o pase temporal" [ngClass]="{'has-error': errors.NroDocPerNatural}">
-                    <span class="help-block" *ngIf="errors.NroDocPerNatural">{{errors.NroDocPerNatural}}</span>
-            </div>
+          <h3>Inicio de Sesión</h3>
+          <p>Persona Jurídica</p>
+    </header>
+
+      <form class="login__form" >      
+        <div>
+             <label for="ruc">N° de RUC del cliente</label>
+            <input type="text" id="ruc" name="ruc"  [(ngModel)]="ruc"  placeholder="Ej.:10152346872" maxlength="11" (change)="changeRuc()" (keypress)="restrictNumeric($event)">
+            <p class="validador" *ngIf="validadorRuc">Debe ingresar el número de RUC.</p>
+            <p class="validador" *ngIf="validadorRucDigitos">El RUC debe tener 11 digitos.</p>
         </div>
-        <div class="form-group row">
-            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12">
-                <label for="linea">Contraseña</label>
-                <input type="password"
-                    class="form-control ng-pristine ng-untouched ng-valid ng-empty ng-valid-maxlength"
-                    [(ngModel)]="form.Contrasena" placeholder="Ingresar una contraseña" [ngClass]="{'has-error': errors.Contrasena}">
-                    <span class="help-block" *ngIf="errors.Contrasena">{{errors.Contrasena}}</span>
-            </div>
+    
+          <div>
+              <label for="numeroDoc">NÚMERO DOCUMENTO</label>
+              <input type="text" id="numeroDoc" name="numeroDoc" [(ngModel)]="numero_documento"  placeholder="Ej.:15234687" (change)="changeNroDocumento()"  (keypress)="restrictNumeric($event)" maxlength="12">
+              <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el número de documento.</p>
+          </div>
+    
+          <div>
+          <div class="input-wrapper">
+            <label for="contrasena">CONTRASEÑA</label>
+            <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena()" maxlength="150" >      
+            <img src="../../assets/img/ver_on.png" (click)="mostrarContrasena()" id="eyeContrasena" class="input-icon password">
+          </div>
+          <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
         </div>
-        <div class="form-group row">
-            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12" style="color: #177ADF; text-align: right">
-                <a [routerLink]="['/recuperar-contrasena-empresa']" style="color: #177ADF">Recuperar Contraseña</a>
-            </div>
+
+        <div class="align-right">
+          <a href="#">Recuperar contraseña</a>
         </div>
-        <div class="form-group row">
-            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12">
-                <a class="btn btn-tramite2" (click)="fnBtnIngresar()">Ingresar</a>
-            </div>
+        
+        <div>
+          <button class="buttonSiguiente" (click)="iniciarSesionPersonaJuridica()" >Ingresar</button>    
         </div>
-        <div class="form-group row">
-            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12" align="center">
-                ¿No tienes un acuenta de empresa? <a [routerLink]="['/registro-empresa']">Crea una ahora</a>
-            </div>
+  
+        <div class="footer">
+          <p>¿No tienes una cuenta de empresa?</p>  
+          <a href="#">Crea una ahora</a>
         </div>
+  
+      </form>
     </div>
-</div>
+  
+  </body>
+  
+
