--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.html
@@ -74,7 +74,7 @@
   
         <div>
           <label for="apellidos">APELLIDOS</label>
-          <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" [(ngModel)]="apellidos" (change)="changeApeliidos($event)" maxlength="150" disabled>
+          <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" [(ngModel)]="apellidos" (change)="changeApellidos($event)" maxlength="150" disabled>
           <p  class="validador" *ngIf="validadorApellidos">Debe ingresar los apellidos.</p>
         </div>
   
