--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.html
@@ -58,7 +58,7 @@
           
                     <div class="right">
                         <label for="apellidos">Apellidos</label>
-                        <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez"  [(ngModel)]="apellidos" (change)="changeApeliidos($event)" maxlength="150" disabled>
+                        <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez"  [(ngModel)]="apellidos" (change)="changeApellidos($event)" maxlength="150" disabled>
                         <p  class="validador" *ngIf="validadorApellidos">Debe ingresar los apellidos.</p>
                     </div>
                  </div>
