--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
@@ -37,7 +37,8 @@
         </div>
         
         <div>
-          <button class="buttonSiguiente" (click)="iniciarSesionPersonaNatural()">Ingresar</button>    
+          <button class="buttonSiguiente" (click)="iniciarSesionPersonaNatural()">Ingresar</button>  
+          <button class="buttonSiguiente" (click)="fnCargarAplicacion()">inf</button>    
         </div>
   
         <div class="footer">
