--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
@@ -8,7 +8,8 @@
           <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
         </div>  
         <div class="logo-aplicacion">
-          <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">
+          <img [src]="urlArchivo" alt="archivo"  width="138">
+          <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
         </div>
           <h3>REGISTRATE</h3>
           <p>Persona Natural</p>      
