--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
@@ -9,7 +9,8 @@
             <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
           </div>  
           <div class="logo-aplicacion">
-            <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">
+            <img [src]="urlArchivo" alt="archivo"  width="138">
+            <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
           </div>
           <h3>Cambiar contraseña</h3>
           <p>Persona Jurídica</p>
