--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
@@ -90,7 +90,7 @@
           </div>
     </div>
     
-        <div *ngIf="isVisiblePaso3">
+        <div *ngIf="validaSuccess">
             <div class="center">
               <h3>Contraseña cambiada</h3>
               <label class="center">Tu contraseña fue guardada con exito</label>
