--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
@@ -1,1 +1,58 @@
-<p>administracion-usuario-empresa works!</p>
+<body class="align">
+    <div class="login">
+    <div class="login__header">
+     <div class="col-md-12"> 
+     <h2 >Administrador de usuarios</h2>
+    </div><br><br><br>
+  <div class="col-md-2">
+    <button class="buttonSiguiente" >Agregar</button>    
+  </div> <br><br><br>
+  <div class="col-md-12">
+    <div align="left">
+        Listado de usuarios
+    </div>
+  </div>
+</div>
+<div class="login__form" >     
+  <div class="col-md-12">
+    <table class="table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th class="table-cabecera">Doc</th>
+                <th class="table-cabecera">Nombres</th>
+                <th class="table-cabecera">Apellidos</th>
+                <th class="table-cabecera">Celular</th>
+                <th class="table-cabecera">Correo</th>
+                <th class="table-cabecera">Estado</th>
+                <th class="table-cabecera">Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="table-detalle"></td>
+                <td class="table-detalle"></td>
+                <td class="table-detalle"></td>
+                <td class="table-detalle"></td>
+                <td class="table-detalle"></td>
+                <td class="table-detalle"></td>
+                <td class="table-detalle">
+                    <a  class="btn btn-link btn-icon"  data-tooltip="tooltip" data-placement="bottom" title="Editar"><i class="fa fa-pencil"></i></a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+</div>
+<div class="login__header">
+    <div class="col-md-10"> 
+    <h2 >Usuario</h2>
+   </div>
+ <div class="col-md-2" align="right">
+   <a  href="#">Eliminar cuenta</a>    
+ </div>
+ <div class="col-md-12">
+  <div class="cont-usuario"> </div>
+  </div>
+</div>
+</div>
+</body>
